--- a/Abhinav-Vishwakarma -animation/index.html
+++ b/Abhinav-Vishwakarma -animation/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Abhinav-Vishwakarma Bouncing Ball Animation</title>
+    <link rel="stylesheet" href="../Abhinav-Vishwakarma -animation/styles.css">
 </head>
 <body>
-    Hii this side abhinav
+    <div class="container">
+        <div class="ball"></div>
+    </div>
+    <div class="container">
+        <div class="ball green"></div>
+    </div>
+    <div class="container">
+        <div class="ball blue"></div>
+    </div>
+    
 </body>
 </html>
